css for new category field
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@6214 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/themes/standard/admin/css/blog.css
+++ b/themes/standard/admin/css/blog.css
@@ -363,6 +363,9 @@ letter-spacing: 0.1em;
 }
 
 #admin_blog_pager_prevnext {
-margin-left:350px;
+    margin-left:350px;
 }
 
+#newcategory {
+    width: 115px;
+}
