- previews for all images in dbforms2 + fck file browser
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@6504 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/themes/standard/admin/css/dbforms2.css
+++ b/themes/standard/admin/css/dbforms2.css
@@ -31,7 +31,7 @@ td.formInput {
 }
 
 #form input, iframe, #form textarea, #form select {
-    border: solid  #006486 1px;
+    border: solid #006486 1px;
     z-index: 1;
 }
 
@@ -182,7 +182,7 @@ td.formInput {
 .imageTooltip {
     color: #000;
     background-color: #fff;
-    border: #333333 dotted 1px;
+    border: solid #ddd 1px;
     padding: 5px;
 }
 
