css for captcha
git-svn-id: https://svn.liip.ch/repos/public/fluxcms_demo/trunk@6568 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/themes/2-cols/css/main.css
+++ b/themes/2-cols/css/main.css
@@ -49,6 +49,13 @@ padding: 0px;
 margin: 5px 50px 15px 50px;
 }
 
+.captcha {
+width:100px;
+border: 1px solid #aaaaaa; 
+margin-top: 5px;
+padding: 2px;
+}
+
 textarea, .formgenerell input, input.formgenerell {
 width:300px;
 border: 1px solid #aaaaaa; 
