--- a/themes/standard/admin/css/dbforms2.css
+++ b/themes/standard/admin/css/dbforms2.css
@@ -30,6 +30,15 @@ td.formInput {
     z-index: 1;
 }
 
+#form h1 {
+    font-size: 13px;
+    font-weight: bold;
+    padding: 10px;
+    margin: 0;
+    margin-bottom: 5px;
+    border-bottom: 1px solid #006486;
+}
+
 #form input, iframe, #form textarea, #form select {
     border: solid #006486 1px;
     z-index: 1;
