make the heading smaller
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@6683 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/themes/standard/admin/css/dbforms2.css
+++ b/themes/standard/admin/css/dbforms2.css
@@ -37,6 +37,7 @@ td.formInput {
     margin: 0;
     margin-bottom: 5px;
     border-bottom: 1px solid #006486;
+    width: 700px;
 }
 
 #form input, iframe, #form textarea, #form select {
