--- a/themes/2-cols/css/main_bird.css
+++ b/themes/2-cols/css/main_bird.css
@@ -345,6 +345,11 @@ padding-top: 0px;
 margin: 5px 50px 15px
 }
 
+.blog_gravatar {
+    float: right;
+    padding-left: 5px;
+}
+
 #right .blog li {
 line-height:  15px;
 padding: 0px 15px 3px 25px;
