--- a/themes/2-cols/css/main_mint.css
+++ b/themes/2-cols/css/main_mint.css
@@ -350,6 +350,12 @@ padding: 0px 15px 3px 25px;
 margin: 0px;
 text-indent: -1em;
 }
+
+.blog_gravatar {
+    float: right;
+    padding-left: 5px;
+}
+
 #livesearch {
 margin: 0px 15px 15px 25px;
 padding:0px;
