--- a/themes/3-cols/css/main_mint.css
+++ b/themes/3-cols/css/main_mint.css
@@ -371,6 +371,12 @@ h3.blog {
 	margin: 0px;
 	text-indent: -1em;
 }
+
+.blog_gravatar {
+    float: right;
+    padding-left: 5px;
+}
+
 #livesearch {
 	margin: 0px 15px 15px 15px;
 	padding:0px;
@@ -382,6 +388,7 @@ h3.blog {
 	width: 120px;
 	border: 1px solid #aaaaaa; 
 }
+
 
 .formurl {
 	display: none;
