added little login form
git-svn-id: https://svn.liip.ch/repos/public/fluxcms_demo/trunk@6971 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/themes/3-cols/css/main_bird.css
+++ b/themes/3-cols/css/main_bird.css
@@ -389,3 +389,29 @@ h3.blog, #right  h3.blog {
 .formurl {
     display: none;
 }
+/* loginform */
+
+#littleLogin  input.input{
+    font-size: 11px;
+    width: 6em;
+    
+}
+
+#littleLogin input {
+    width: 6em;
+    font-size: 11px;
+    background-color: #f3f3f3;
+    border: 1px solid #555555;
+    margin-top: 3px;
+}
+
+#littleLogin label {
+     width: 3em;
+     float: left;
+     line-height: 21px;
+     clear: left;
+}
+
+#littleLogin {
+    margin-left: 15px;
+}
