--- a/themes/3-cols/css/main.css
+++ b/themes/3-cols/css/main.css
@@ -298,6 +298,9 @@ padding: 2px;
 
 /* just used vor the blog
 -------------------------------------- */
+
+
+
 #content .post_title {
 	color: #333;
 	border-bottom: 1px solid #aaa;
@@ -405,3 +408,30 @@ pre {
     overflow: auto;
 }
 
+
+/* loginform */
+
+#littleLogin  input.input{
+    font-size: 11px;
+    width: 6em;
+    
+}
+
+#littleLogin input {
+    width: 6em;
+    font-size: 11px;
+    background-color: #f3f3f3;
+    border: 1px solid #555555;
+    margin-top: 3px;
+}
+
+#littleLogin label {
+     width: 3em;
+     float: left;
+     line-height: 21px;
+     clear: left;
+}
+
+#littleLogin {
+    margin-left: 15px;
+}
