made sitename clickable here as well
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@7056 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/themes/standard/admin/css/blog.css
+++ b/themes/standard/admin/css/blog.css
@@ -1,3 +1,4 @@
+
 .post_title {
         border-bottom: 1px solid #aaa;
         margin-bottom: 0px;
@@ -360,6 +361,8 @@ letter-spacing: 0.1em;
 #oneform input {
     width: inherit;
     margin-right: 2px;
+    color:red;
+    background:red;
 }
 
 #admin_blog_pager_prevnext {
