gender specific templates
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@7057 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/install/newsletter/themes/3-cols/templates/scansystems.xhtml
+++ b/install/newsletter/themes/3-cols/templates/scansystems.xhtml
@@ -7,7 +7,7 @@
 		<div id="content" style="font-family: Verdana,Arial,Helvetica,sans-serif; font-size: 11px;">
 
 			<div id="intro" style="border: 1px solid #E4E0DF;">
-				<h1 style="font-weight:bold; font-size:11px; color:#000000">Sehr geehrter {title} {lastname}</h1>
+				<h1 style="font-weight:bold; font-size:11px; color:#000000">Sehr geehrte{m:r} {m:Herr}{f:Frau} {lastname}</h1>
 				<p>Einleitungs-Text</p>
 			</div>
 
