show save info box in fck
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@7099 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/themes/standard/admin/css/admin.css
+++ b/themes/standard/admin/css/admin.css
@@ -67,3 +67,12 @@ body {
 .browserWarningRed {
      background-color: #FF6060;
 }
+
+#LSResult { background-color: #006486;
+    color: #ffffff;
+    border: 1px solid #000000;
+    padding: 1px 10px;
+    margin-left: 10px;
+    display: none;
+    
+}
