select box ripped different layouts apart
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@7163 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/themes/standard/admin/css/formedit.css
+++ b/themes/standard/admin/css/formedit.css
@@ -41,7 +41,7 @@ select {
     padding-left: 3px;
     background-color: white;
     z-index: 10;
-    width:600px; 
+/*    width:600px;  */
 }
 
 .buttonStyle,  a.buttonStyle {
