--- a/webinc/fck/editor/dialog/common/fck_dialog_common.css
+++ b/webinc/fck/editor/dialog/common/fck_dialog_common.css
@@ -70,10 +70,9 @@
 {
 	border: 1px outset;
 	cursor: pointer;
-	cursor: hand;
 }
 
 .FCK__FieldNumeric
 {
-	behavior: url(common/fcknumericfield.htc) ;
+/*	behavior: url(common/fcknumericfield.htc) ;*/
 }
