--- a/themes/standard/admin/css/blog.css
+++ b/themes/standard/admin/css/blog.css
@@ -369,3 +369,15 @@ letter-spacing: 0.1em;
 #newcategory {
     width: 115px;
 }
+
+#sidebar_edit {
+    
+    position: absolute;
+    background-color: white;
+    border: 2px solid #006486;
+    z-index: 1000;
+    width: 600px;
+    padding: 10px;
+    margin-top: 10px;
+    margin-left: 0px;
+}
