--- a/themes/standard/admin/css/formedit.css
+++ b/themes/standard/admin/css/formedit.css
@@ -226,7 +226,7 @@ h1.pageTitle, h1.page, h2.openIdPage {
     min-height: 2.6em;
     //height: 2,6em;
     border: 1px solid #006486;
-    
+        margin-left: 0px;    
     
 }
 
