FCK 2.3.1 (unpatched, patch will follow soon)
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@7734 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/webinc/fck/editor/dialog/common/fck_dialog_common.css
+++ b/webinc/fck/editor/dialog/common/fck_dialog_common.css
@@ -57,7 +57,7 @@
 	width: 16px;
 	height: 16px;
 	background-repeat: no-repeat;
-	border: 1px none;
+	border: none 1px;
 	font-size: 1px ;
 }
 
@@ -68,11 +68,12 @@
 
 .BtnOver
 {
-	border: 1px outset;
+	border: outset 1px;
 	cursor: pointer;
+	cursor: hand;
 }
 
 .FCK__FieldNumeric
 {
-/*	behavior: url(common/fcknumericfield.htc) ;*/
+	behavior: url(common/fcknumericfield.htc) ;
 }
