styles for liveselect pager
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@7738 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/themes/standard/admin/css/dbforms2.css
+++ b/themes/standard/admin/css/dbforms2.css
@@ -153,7 +153,6 @@ td.formInput {
     cursor: pointer;
     max-height: 500px;
     overflow: auto;
-
 }
 
 .liveselectResultsShadow {
@@ -190,8 +189,13 @@ td.formInput {
     padding: 0px 3px 0px 3px;
 }
 
-.liveselectResultsPager {
-    border-bottom: 1px solid;
+.liveselectPager {
+    color: #666;
+    font-size: 11px;
+    padding-top: 3px;
+    border-top: 1px solid #333;
+    margin-top: 2px;
+    display: none;
 }
 
 .listview {
