take away prototype title
git-svn-id: https://svn.liip.ch/repos/public/fluxcms_demo/trunk@8053 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/_hosts/live/themes/2-cols/templates/default.xhtml
+++ b/_hosts/live/themes/2-cols/templates/default.xhtml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <html xmlns:bx="http://bitflux.org/doctypes/bx" xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>Prototype Test</title>
+        <title></title>
     </head>
 
     <body>
