--- a/_hosts/live/themes/3-cols/templates/default.xhtml
+++ b/_hosts/live/themes/3-cols/templates/default.xhtml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <html xmlns:bx="http://bitflux.org/doctypes/bx" xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>Prototype Test</title>
+        <title></title>
     </head>
 
     <body>
