- added margin to the subformcontainer
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@8526 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/themes/standard/admin/css/dbforms2.css
+++ b/themes/standard/admin/css/dbforms2.css
@@ -39,7 +39,7 @@ td.formInput {
 .subformcontainer {
     padding: 5px 5px 5px 5px;
     border: 1px solid #ddd;
-
+    margin-bottom: 120px;
     background-color: #e9e9e9;
 }
 
