--- a/themes/standard/admin/css/formedit.css
+++ b/themes/standard/admin/css/formedit.css
@@ -201,7 +201,7 @@ body#upload{
     background-color: #f3f3f3;
 }
 
-#openIdTrust {
+.openIdTrust {
     background-color:#f3f3f3;
     width: 94%;
     padding: 5px;
@@ -209,6 +209,11 @@ body#upload{
     padding-left: 15px;
     border: 5px solid #006486;
 }
+
+.openIdTrust h3 {
+color: #000000;
+}
+
 
 h1.pageTitle, h1.page, h2.openIdPage {
     margin:0px;
