css fuer das openid interface
git-svn-id: https://svn.liip.ch/repos/public/fluxcms/trunk@8596 99f7f646-bdd5-0310-89f9-ddcb10b10bf3

--- a/themes/standard/admin/css/formedit.css
+++ b/themes/standard/admin/css/formedit.css
@@ -214,6 +214,10 @@ body#upload{
 color: #000000;
 }
 
+.personaform select {
+    width:300px;
+}
+
 
 h1.pageTitle, h1.page, h2.openIdPage {
     margin:0px;
